@startuml

title __SERVER's Class Diagram__\n

  namespace std {
    class Dictionary {
    }
  }


  namespace std {
    class DictionaryServer {
    }
  }


  namespace std  {
    class FileUpdater {
    }
  }


  namespace std  {
    class Server {
    }
  }


  namespace std  {
    class WorkerThread {
    }
  }
  

  Dictionary o-- FileUpdater : fileUpdater
  FileUpdater -up-|> java.util.TimerTask
  FileUpdater o-- Dictionary : dict
  Server o-- Dictionary : dict
  WorkerThread o-- Dictionary : dict
  WorkerThread o-- Server : source


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
